--- a/rmq-producer/pom.xml
+++ b/rmq-producer/pom.xml
@@ -24,5 +24,10 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.3.3</version>
+        </dependency>
     </dependencies>
 </project>
