--- a/rmq-consumer/pom.xml
+++ b/rmq-consumer/pom.xml
@@ -10,8 +10,7 @@
     <artifactId>rmq-comsumer</artifactId>
     <packaging>jar</packaging>
 
-    <name>rmq-comsumer</name>
-    <url>http://maven.apache.org</url>
+    <name>rmq-consumer</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,11 +23,15 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/cn.hutool/hutool-all -->
         <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>untitled</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.18</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
 </project>
