--- a/rmq-producer/src/main/resources/application.yml
+++ b/rmq-producer/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 rocketmq:
-    name-server: 172.16.0.122:9876
+    name-server: 172.16.0.122:9876;172.16.0.123:9876
     producer:
         group: campaign
         send-message-timeout: 3000
