--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <groupId>org.example</groupId>
-  <artifactId>untitled</artifactId>
+  <artifactId>springboot-rocketmq-demo</artifactId>
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>rmq-consumer</module>
